fix: increase title width and align items center

--- a/frontend/star-wars-project/src/components/starWarsTitle/stylesStarWarsTitle.css
+++ b/frontend/star-wars-project/src/components/starWarsTitle/stylesStarWarsTitle.css
@@ -1,7 +1,8 @@
 .title {
-  max-width: 10px;
-  display: flex; */
+  width: 80px;
+  display: flex;
   flex-direction: column;
+  align-items: center;
 
   text-align: center;
 
@@ -18,6 +19,11 @@
   color: var(--color-orange-2);
   opacity: 0.8;
   text-shadow: -6px -6px 18px var(--color-white);
-  transition: 0.6s; 
+  transition: 0.6s;
 }
 
+@media (min-width: 801px) {
+  .title {
+    font-size: var(--font-size-2);
+  }
+}
